--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Geust"
+        android:padding="5dp"
+        android:textStyle="bold"
+        android:id="@+id/user1" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Sign In"
+        android:textSize="11sp"
+        android:layout_marginStart="5dp"
+        android:id="@+id/signin1" />
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Sign Out"
+        android:textSize="11sp"
+        android:layout_marginStart="5dp"
+        android:id="@+id/signout1" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Profile"
+        android:textSize="11sp"
+        android:layout_marginStart="5dp"
+        android:id="@+id/profile1" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Search Lab Name..."
-        android:drawableStart="@drawable/search"
+        android:hint="Search Lab name..."
         android:layout_margin="5dp"
-        android:id="@+id/search"/>
+        android:drawableStart="@drawable/search"
+        android:id="@+id/search" />
+
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/progress"
-        android:layout_margin="3dp"/>
-
+        android:layout_margin="3dp" />
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/swiperefresh">
-
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/recyclerview"
             tools:listitem="@layout/single_lab"/>
-
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-
-
 </LinearLayout>
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:orientation="vertical"-->
+<!--    tools:context=".MainActivity">-->
+
+<!--    <com.google.android.material.textview.MaterialTextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Guest"-->
+<!--        android:padding="5dp"-->
+<!--        android:id="@+id/user"-->
+<!--        android:textStyle="bold"/>-->
+
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:textSize="11sp"-->
+<!--        android:text="Sign In"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:id="@+id/signin"/>-->
+
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:textSize="11sp"-->
+<!--        android:text="Sign Out"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:id="@+id/signout"/>-->
+
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:textSize="11sp"-->
+<!--        android:text="Profile"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:id="@+id/profile"/>-->
+
+<!--    <EditText-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Search Lab name.."-->
+<!--        android:drawableStart="@android:drawable/ic_menu_search"-->
+<!--        android:layout_margin="5dp"-->
+<!--        android:id="@+id/etsearch"/>-->
+<!--    <ProgressBar-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="3dp"-->
+<!--        android:id="@+id/progress"/>-->
+
+
+<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/swipeRefreshLayout">-->
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/recycler"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            tools:listitem="@layout/single_lab"/>-->
+
+<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+
+<!--</LinearLayout>-->
